--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -28,12 +28,9 @@ textarea {
     --div-background-color: #0c0c0c;
     --details: #8083FF;
     --letras: #F2ECFF;
-    --color-caixa-dicas:#24292e;
-    --color-txt-dicas: #A479F4;
-    --color-primary-darker: #6842c2;
-    --color-text-title: #32264D;
-    --color-text-base: #6A6180;
-    --color-box-footer: #FAFAFC;
+    --color-caixa-dicas: #24292e;
+
+
 }
 
 /*--------------------------------------------------------------------------------------------------------------*\
@@ -287,8 +284,6 @@ input {
     overflow: hidden;
     padding: 5%;
     background-attachment: fixed;
-
-
 }
 
 /*class para manipular ul*/
@@ -346,11 +341,11 @@ img[src] {
 }
 
 section#dicas {
-    height: 100vh;
+    height: auto;
     width: 100%;
     background-image: url(../sobre-fotos/fundo.jpg);
-    margin-bottom: 220px;
-    overflow-y: scroll;
+    margin-bottom: 185px;
+    overflow: hidden;
     background-attachment: fixed;
 }
 
@@ -438,15 +433,15 @@ footer {
 
 #report a:hover {
     opacity: 1;
+    background-color: var(--letras);
 }
 
 /*div que envolve os logos do rodapé*/
 .redes {
     display: inline-flex;
     align-items: center;
-    justify-content: flex-start;
     width: 100%;
-    padding: 6px;
+
 }
 
 .redes::after {
@@ -467,7 +462,7 @@ footer {
 }
 
 .botao:hover {
-    filter: brightness(50%);
+    background-color: var(--letras);
 }
 
 .fab {
@@ -480,7 +475,7 @@ footer {
 }
 
 .fab:hover {
-    background-color: var(--color-light);
+    background-color: var(--letras);
 }
 
 /*-----------*\
@@ -545,9 +540,7 @@ footer {
         padding: 2px;
         cursor: pointer;
         display: none;
-
     }
-
 
     /*selecionar UL dentro da LI (galeria) menu-mobile*/
     .sub ul {
@@ -601,7 +594,6 @@ footer {
         font-size: 0.8rem;
 
     }
-
 }
 
 @media (max-width: 600px) {
@@ -674,15 +666,9 @@ footer {
         padding: 8px;
     }
 
-
-
 }
 
 @media (max-width: 414px) {
-    section#dicas {
-        margin-bottom: 250px;
-    }
-
     div.dicas_conteudo>h3 {
         font-size: 0.8rem;
     }
@@ -716,7 +702,6 @@ footer {
     .conteudo-rodape {
         line-height: 2.8em;
         font-size: 0.5rem;
-
     }
 
     .fab {
@@ -727,7 +712,6 @@ footer {
     .botao {
         font-size: 1em;
     }
-
 }
 
 @media (max-width: 320px) {
