--- a/css/agradecimentos.css
+++ b/css/agradecimentos.css
@@ -5,24 +5,25 @@
 }
 
 body {
-
-    font-family: "Colfax", sans-serif;
-    font-weight: 400;
     width: 100%;
     height: 100%;
-    color: white;
-    background-color: #171a21;
     text-transform: uppercase;
+    background-image: url(../sobre-fotos/fundo.jpg);
+}
+body,
+textarea {
+    color: var(--letras);
+    font: 500 1rem poppins;
 }
 
-/*Cor de background do rodapé e barra cabeçalho*/
 :root {
-    --cor-background-div: #0c0c0c;
+    --div-background-color: #0c0c0c;
+    --details: #8083FF;
+    --letras: #F2ECFF;
+    --cor-background-principal: #24292e;
 }
 
-
-
-.barra-cabecalho {
+header {
     width: 100%;
     height: 60px;
     display: flex;
@@ -30,12 +31,10 @@ body {
     align-items: center;
     position: fixed;
     top: 0;
-    background-color: var(--cor-background-div);
-
+    background-color: var(--div-background-color);
 }
 
-
-.barra-cabecalho li {
+header li {
     margin-left: 40px;
     list-style: none;
     letter-spacing: 1px;
@@ -43,54 +42,53 @@ body {
     font-weight: normal;
     text-transform: uppercase;
     padding: 15px;
-    border: solid 1px #16a7f6;
+    border: solid 1px var(--details);
     border-radius: 30px;
 
 }
 
-.barra-cabecalho li:hover {
-    background-color: #16a7f6;
-    display: block;
-
-
+header li:hover {
+    background-color: var(--details);
 }
-
-.barra-cabecalho a {
+header a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
-
+    color: var(--letras);
 }
-
 .container {
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: 80%;
     display: flex;
+    margin: 0 auto;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 50px;
-    margin-bottom: 50px;
-    margin-top: 50px;
     letter-spacing: 1px;
-
+    border-radius: 10px;
+    background-color: var(--cor-background-principal);
+    margin-top: 5em;
+    margin-bottom: 3em;
+    padding: 20px;
+}
+.container h2{
+    text-align: center;
 }
 
 .lista {
-    margin-top: 50px;
+    margin-top: 3em;
     line-height: 2.5em;
     text-transform: uppercase;
 
 }
 .fa-caret-down{
-    color: lightgreen;
+    color: var(--details);
 }
 
 .lista a {
-    color: lightgreen;
+    color: var(--details);
 }
 
 .rodape {
-    background-color: var(--cor-background-div);
+    background-color: var(--div-background-color);
     text-align: center;
     bottom: 0;
     position: relative;
