--- a/css/sobre.css
+++ b/css/sobre.css
@@ -53,7 +53,7 @@ a {
     margin-left: 40px;
     list-style: none;
     letter-spacing: 1px;
-    font-size: 11pt;
+    font: 11pt;
     font-weight: normal;
     text-transform: uppercase;
     padding: 15px;
